--- a/OttoMail/src/OttoMail/project.json
+++ b/OttoMail/src/OttoMail/project.json
@@ -10,7 +10,8 @@
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
     "Microsoft.AspNet.Mvc.Core": "6.0.0-rc1-final",
     "EntityFramework.Commands": "7.0.0-rc1-final",
-    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final"
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+    "EntityFramework.Core": "7.0.0-rc1-final"
   },
 
   "commands": {
