--- a/OttoMail/src/OttoMail/bower.json
+++ b/OttoMail/src/OttoMail/bower.json
@@ -1,8 +1,9 @@
 {
-	"name": "ASP.NET",
+  "name": "ottomail",
+  "version": "1.0.0",
 	"private": true,
   "dependencies": {
-    "bootstrap": "3.3.6",
-    "jquery": "2.2.3"
+    "jquery": "2.2.3",
+    "bootstrap": "3.3.6"
   }
 }
