--- a/OttoMail/src/OttoMail/bower.json
+++ b/OttoMail/src/OttoMail/bower.json
@@ -4,6 +4,7 @@
 	"private": true,
   "dependencies": {
     "jquery": "2.2.3",
-    "bootstrap": "3.3.6"
+    "bootstrap": "3.3.6",
+    "ajax": "2.1.2"
   }
 }
